--- a/Webservice/rest-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/Webservice/rest-webservice/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>  
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
-         version="3.0">
-    <display-name>Navin - Webservice</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	version="3.0">
+	<display-name>Navin - Webservice</display-name>
 
-    <servlet>
-        <servlet-name>rest-ws</servlet-name>
-        <servlet-class>
-            com.sun.jersey.spi.container.servlet.ServletContainer
-        </servlet-class>
-        <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.navin.resource</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>rest-ws</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
+	<servlet>
+		<servlet-name>rest-ws</servlet-name>
+		<servlet-class>
+			com.sun.jersey.spi.container.servlet.ServletContainer
+		</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>com.navin.resource;com.navin.util.jackson;com.fasterxml.jackson.jaxrs.json
+			</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>rest-ws</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+
+
+
 
 </web-app>  
